# Fyrenzium

./: .gitignore  README.md  dubbing-pipeline-short.md  dubbing_pipeline.py  pyproject.toml
dubbing_pipeline/: __init__.py  cli.py  media.py  models.py  pipeline.py  review.py  stages.py  state.py
dubbing_pipeline/providers/: __init__.py  elevenlabs.py  openrouter.py
tests/: test_review.py  test_stages.py  test_state.py
